jsoup changelog

*** Release 0.3.2 (pending)
 * Throw exception if trying to parse non-text content
 	<http://github.com/jhy/jsoup/issues/issue/17>

 * Added Node#remove and Node#replaceWith
 	<http://github.com/jhy/jsoup/issues/issue/19>

 * Allow _ and - in CSS ID selectors (per CSS spec).
 	<http://github.com/jhy/jsoup/issues/issue/10>
 
 * Relative links are resolved to absolute when cleaning, to normalize
    output and to verify safe protocol. (Were previously discarded.)
      <http://github.com/jhy/jsoup/issues/issue/12>
 
 * Allow combinators at start of selector query, for query refinements
 	  <http://github.com/jhy/jsoup/issues/issue/13>

 * Added Element#val() and #val(String) methods, for form values
 	  <http://github.com/jhy/jsoup/issues/issue/14>

 * Changed textarea contents to parse as TextNodes, not DataNodes,
    so contents visible to text() (and val(), as treated as form input)

*** Release 0.3.1 (2010-Feb-20)
 * New features: supports Elements#html(), html(String),
    prepend(String), append(String); bulk methods for corresponding
    methods in Element.

 * New feature: Jsoup.isValid(html, whitelist) method for user input
    form validation.
 
 * Improved Elements.attr(String) to find first matching element
    with attribute.

 * Fixed assertion error when cleaning HTML with empty attribute
 	  <http://github.com/jhy/jsoup/issues/issue/7>

*** Release 0.2.2 (2010-Feb-07)
 * jsoup packages are now available in the Maven central repository.
 
 * New feature: supports Element#addClass, removeClass, toggleClass;
    also collection class methods on Elements.
 * New feature: supports Element#wrap(html) and Elements#wrap(html).
 * New selector syntax: supports E + F adjacent sibling selector
 * New selector systax: supports E ~ F preceding sibling selector
 * New: supports Element#elementSiblingIndex()

 * Improved document normalisation.
 * Improved HTML string output format (pretty-print)
 