@@ -1,5 +1,6 @@
 package org.jsoup.nodes;
 
+import org.jsoup.Jsoup;
 import org.junit.Test;
 
 import static org.junit.Assert.*;
@@ -21,5 +22,16 @@ public class TextNodeTest {
         assertTrue(three.isBlank());
         assertFalse(four.isBlank());
         assertFalse(five.isBlank());
+    }
+    
+    @Test public void testTextBean() {
+        Document doc = Jsoup.parse("<p>One <span>two</span> three</p>");
+        Element p = doc.select("p").first();
+        
+        TextNode tn = (TextNode) p.childNode(2);
+        assertEquals(" three", tn.text());
+        
+        tn.text(" POW!");
+        assertEquals("One <span>two</span> POW!", p.html());
     }
 }
